--- a/index.org
+++ b/index.org
@@ -2,8 +2,8 @@
 #+AUTHOR: Bennett Mertz
 
 * Indoor Automated Garden
-
-* Linux RICE [[https://github.com/bcmertz/dotfiles][Github]]
+  A year ago I moved into my friends' childhood home in the Bronx
+* Linux RICE [[https://github.com/bcmertz/dotfiles][(Github)]]
   I run an Arch Linux with a completely customized userspace that has tight integration between emacs, terminal, and various unix  utilities
 ** Overview
 ** Custom scripts
@@ -13,12 +13,12 @@
 
 
 * Open Source Coding Projects
-** Search Within Video [[https://github.com/bcmertz/videosearch][Github]] [[http://www.searchwithinvideo.com/][Website]]
-** Ray Tracer [[https://github.com/bcmertz/ray-tracer][Github]]
-** Steganographic Encoder [[https://github.com/bcmertz/steganographic-encoder][Github]]
+** Search Within Video ([[https://github.com/bcmertz/videosearch][Github]] [[http://www.searchwithinvideo.com/][Website]])
+** Ray Tracer ([[https://github.com/bcmertz/ray-tracer][Github]])
+** Steganographic Encoder ([[https://github.com/bcmertz/steganographic-encoder][Github]])
 
 
-* Emacs Build [[https://github.com/bcmertz/dotfiles/tree/master/.emacs.d][Github]]
+* Emacs Build ([[https://github.com/bcmertz/dotfiles/tree/master/.emacs.d][Github]])
   Emacs is the ideal extensible editor for all types of plain text, including code and latex. My custom build includes support for many useful tools including vim emulation, email, autocompletion, compilation, and many tweaks that make windowing inside of emacs work like it does in my window manager of choice i3.
 ** Measuring startup time
 ** Emacs as window manager
