--- a/index.org
+++ b/index.org
@@ -9,7 +9,7 @@
 [[./public/begining.JPG]]
 
 Soon I added in an arduino controlled relay (in the box) to turn the lights on and off at set times each day. The program controlling it was simply doing a delay() for 12 hours. Not the most robust system, and it reset the program timer anytime the power reset, which was frequent with storms and sloppy cord management :)
-s[[./public/automatedlights.JPG]]
+[[./public/automatedlights.JPG]]
 
 
 A bell pepper coming in! By this point I added in a rtc_ds1307 real time clock to keep a battery powered time store that wouldn't reset in the case of power failures as the simple arduino program I wrote would.
