--- a/index.org
+++ b/index.org
@@ -29,12 +29,12 @@ Here is my white mulberry grown from seeds taken on my street, white mullberries
 ** Overview
    There is too much to cover but here are links to some of the important areas of code and scripts I've written
    - [[https://github.com/bcmertz/dotfiles/blob/master/.local/bin/dmenu/choose_keyboard][Internationalization]] - this script queries the installed keyboards and sets a toggle-able keyboard with the default en keyboard
+   - [[https://github.com/bcmertz/dotfiles/blob/master/.local/bin/wmsel][Here]] I wrote a simple bash display manager, which is used [[https://github.com/bcmertz/dotfiles/blob/master/.profile#L26-L36][here]] to choose the window manager on login. The second part of this process is done [[https://github.com/bcmertz/dotfiles/blob/master/.xinitrc#L31-L44][here]], where we take the name of window manager and get its startup command from ~/usr/share/xsessions/$session.desktop~
    - [[https://github.com/bcmertz/dotfiles/blob/master/.local/bin/cron/setbg][Set Background]] - this script is run as a cron job to change the wallpaper every hour to a random wallpaper. If invoked manually you can pass the -s flag to keep the wallpaper the same. Additionally you can pass a wallpaper name to choose specifically which wallpaper is desired.
    - [[https://github.com/bcmertz/dotfiles/blob/master/.local/bin/setup/backuppass][Passwords & GPG Keys]] - this script backs up encrypted passwords and GPG keys and [[https://github.com/bcmertz/dotfiles/blob/master/.local/bin/setup/setuppass][this script]] clones them to a new/broken machine
    - [[https://github.com/bcmertz/dotfiles/blob/master/.local/bin/killport][Kill Port utility]] - to kill whatever process is runnign on a specific port. Very useful when node bugs out
    - [[https://github.com/bcmertz/dotfiles/blob/master/.local/bin/git_alias][Git alias]] - this utility allows me to use git commands in my home folder as it is version controlled as a bare git repository. This means all my dotfiles are always version controlled without any fancy scripts or tools, just git
    - [[https://github.com/bcmertz/dotfiles/blob/master/.xprofile][Startup applications]]: this runs when Xorg starts up and checks to see which DE/WM is being used and starts the appropriate applications
-   - [[https://github.com/bcmertz/dotfiles/blob/master/.profile#L24-L57][Here we choose the session window manager and pass the info]] to .xinitrc which sets the SESSION environmental variable used elsewhere
 
 * Open Source Coding Projects
   Open source is incredibly important to me, and I make every piece of software I write open souce and freely liscenced. Below are three of my favorite projects I've written over the last few years.
