--- a/index.org
+++ b/index.org
@@ -44,7 +44,7 @@ Here is my white mulberry grown from seeds taken on my street, white mullberries
    This project has a microservice architecture and runs the video parser and image classifier on a python backend and the webpage off a node server.
 ** Ray Tracer ([[https://github.com/bcmertz/ray-tracer][Github]])
    Pictured below is the sample output from my ray tracer. It can render shapes at different depths, with variable lighting and backgrounds. Shadows don't work properly but there should be support soon.
-   [[./public/ray-tracer.ppm]]
+   [[./public/ray-tracer.png]]
 ** Steganographic Encoder ([[https://github.com/bcmertz/steganographic-encoder][Github]])
    This project somewhat sloppily hides messages and decodes them from pictures using least significant bit manipulation.
 * Emacs Build ([[https://github.com/bcmertz/dotfiles/tree/master/.emacs.d][Github]])
