--- a/index.org
+++ b/index.org
@@ -14,7 +14,7 @@ Soon I added in an arduino controlled relay (in the box) to turn the lights on a
 A bell pepper coming in! By this point I added in a rtc_ds1307 real time clock to keep a battery powered time store that wouldn't reset in the case of power failures as the simple arduino program I wrote would.
 [[./public/bellpepper.JPG]]
 
-Next I added in watering, using an old paint bucket and a step drill bit I fit a hose connector to the bucket. This proved to be leaky and was eventually replaced with a proper gasget.
+Next I added in gravity fed drip irrigation, using an old paint bucket and a step drill bit I fit a hose connector to the bucket. This proved to be leaky and was eventually replaced with a proper gasget and valve. Water is fed into the bucket, then goes down main line then enters the drip line and leaves the emitters at 0.5 Gal / hour.
 [[./public/constructingwatering1.JPG]]
 
 Pictured are my two black mulberry cuttings which sent out roots :)
